<resources>
    <string name="app_name">Notes</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="registrati_button">Registrati</string>
    <string name="login_button">Login</string>
    <string name="recupera_password_button">Recupera Password</string>
    <string name="insert_email">Inserisci email</string>
    <string name="insert_password">Inserisci password</string>
    <string name="confirm_password">Conferma password</string>
    <string name="next_button">Avanti</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="inserisci_cognome">Inserisci cognome</string>
    <string name="inserisci_data_di_nascita">Data di nascita</string>
    <string name="luogo_di_nascita">Luogo di nascita</string>
    <string name="genere">Genere</string>
    <string name="genereMaschile">M</string>
    <string name="genereFemminile">F</string>
    <string name="genereNonDefinito">Altro</string>
    <string name="via_e_citta">Via e città</string>
    <string name="conferma_button">Conferma</string>
    <string name="salta_button"><u>Salta</u></string>
    <string name="conferma_email">Conferma Email</string>
    <string name="inserisci_codice">Inserisci codice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrazione_titolo">Registrazione</string>
    <string name="testo_codiceOTP">Inserisci il codice ricevuto via email</string>
    <string name="registrazione_testo">Crea un nuovo account</string>
    <string name="testo_datiExtra">Completa il tuo account</string>
    <string name="titolo_nota"><b>titolo nota</b></string>
    <string name="data_nota">data nota</string>
    <string name="anteprima_nota">anteprima nota</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>