<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/skip_dati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:text="@string/salta_button"
        android:textColor="@color/azzurro_textview"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/datiExtra_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="serif"
        android:text="@string/testo_datiExtra"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/nome_registrazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nome_registrazione"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/inserisci_nome"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cognome_registrazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cognome_registrazione"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/inserisci_cognome"
        android:inputType="text|date"
        app:layout_constraintBottom_toTopOf="@+id/via_e_citta_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/nome_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nome_registrazione" />

    <EditText
        android:id="@+id/via_e_citta_registrazione"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/via_e_citta"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/data_di_nascita_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/cognome_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cognome_registrazione" />

    <EditText
        android:id="@+id/data_di_nascita_registrazione"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/inserisci_data_di_nascita"
        android:inputType="text|date"
        app:layout_constraintBottom_toTopOf="@+id/luogo_di_nascita_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/via_e_citta_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/via_e_citta_registrazione" />

    <EditText
        android:id="@+id/luogo_di_nascita_registrazione"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:hint="@string/luogo_di_nascita"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/checkboxes_genere"
        app:layout_constraintEnd_toEndOf="@+id/data_di_nascita_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/data_di_nascita_registrazione" />

    <LinearLayout
        android:id="@+id/checkboxes_genere"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/via_e_citta_registrazione"
        app:layout_constraintStart_toStartOf="@+id/via_e_citta_registrazione">

        <TextView
            android:id="@+id/genere_regitrazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/genere"
            android:textSize="22sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_masculine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genereMaschile"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_feminine"
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:text="@string/genereFemminile"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genereNonDefinito"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        style="@style/bottone_banner"
        android:text="@string/conferma_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>