<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Registrazione">

    <TextView
        android:id="@+id/registration_title"
        style="@style/titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/registrazione_titolo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/registration_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="serif"
        android:text="@string/registrazione_testo"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="@id/registration_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/registration_email"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/registration_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/registration_password"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/registration_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/editnote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/registration_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        style="@style/bottone_banner"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

