<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DatiAggiuntivi">

    <TextView
        android:id="@+id/skip_dati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:text="@string/salta_button"
        android:textColor="@color/azzurro_textview"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nome_registrazione"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/inserisci_nome"
        app:layout_constraintBottom_toTopOf="@+id/cognome_registrazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/data_di_nascita_registrazione"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/inserisci_cognome"
        app:layout_constraintBottom_toTopOf="@+id/luogo_di_nascita_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/cognome_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cognome_registrazione" />

    <TextView
        android:id="@+id/genere_registrazione"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/inserisci_data_di_nascita"
        app:layout_constraintBottom_toTopOf="@+id/via_e_citta_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/luogo_di_nascita_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/luogo_di_nascita_registrazione" />

    <TextView
        android:id="@+id/cognome_registrazione"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/luogo_di_nascita"
        app:layout_constraintBottom_toTopOf="@+id/data_di_nascita_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/nome_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nome_registrazione" />

    <TextView
        android:id="@+id/luogo_di_nascita_registrazione"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/genere"
        app:layout_constraintBottom_toTopOf="@+id/genere_registrazione"
        app:layout_constraintEnd_toEndOf="@+id/data_di_nascita_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/data_di_nascita_registrazione" />

    <TextView
        android:id="@+id/via_e_citta_registrazione"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:hint="@string/via_e_citta"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/genere_registrazione"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/genere_registrazione" />

    <Button
        android:id="@+id/register_button"
        style="@style/bottone_banner"
        android:text="@string/conferma_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>