<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azzurro_sfondo"
    tools:context=".views.MainActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="184dp"
        android:layout_height="186dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/text_email"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <TextView
        android:id="@+id/text_password"
        style="@style/editnote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:hint="@string/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <TextView
        android:id="@+id/button_password_dimenticata"
        android:layout_width="169dp"
        android:layout_height="41dp"
        android:layout_marginTop="9dp"
        android:text="@string/recupera_password_button"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <Button
        android:id="@+id/button_registrati"
        style="@style/bottone_smussato"
        android:layout_marginTop="20dp"
        android:text="@string/registrati_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_password_dimenticata" />

    <Button
        android:id="@+id/button_login"
        style="@style/bottone_smussato"
        android:layout_marginTop="16dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registrati" />

</androidx.constraintlayout.widget.ConstraintLayout>